# resoterre

./: .cruft.json  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .zenodo.json  AUTHORS.rst  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.rst  Makefile  README.rst  environment-dev.yml  environment-docs.yml  pyproject.toml  tox.toml
.github/: dependabot.yml
.github/workflows/: auto-accept-ci-changes.yml  bump-version.yml  codeql.yml  first-pull-request.yml  main.yml  publish-pypi.yml  scorecard.yml  tag-testpypi.yml
CI/: requirements_ci.in  requirements_ci.txt
configs/downscaling/: downscaling_inference_rdps_to_hrdps.yaml  downscaling_preprocessing.yaml  downscaling_preprocessing_rdps_to_hrdps.yaml  downscaling_training_rdps_to_hrdps.yaml
docker/: Dockerfile.base  Dockerfile.inference  README.md
docs/: index.rst
examples/deploy/: README.md  deploy_body.yaml  execute_unet_cwl_schema.yml  unet.cwl
notebooks/: .gitignore  catalog.json  unetToMLM.ipynb
notebooks/ml-model-package/: collection.json  item_unet_rdps_to_hrdps.json
notebooks/ml-model-package/unet_rdps_to_hrdps/: unet_rdps_to_hrdps.json
scripts/hybrid_data_loaders/: hrdps_integrity_check.py  hrdps_integrity_check_4smk.py  rdps_integrity_check.py  rdps_integrity_check_4smk.py  rdps_to_hrdps_on_disk.smk  rdps_to_hrdps_save_data_loader.py  rdps_to_hrdps_save_data_loader_4smk.py  rdps_to_hrdps_split_valid_datetime.py  rdps_to_hrdps_split_valid_datetime_4smk.py
scripts/inference/: downscaling_inference_rdps_to_hrdps.py
scripts/meta_workflows/downscaling/rules/: 01_rdps_to_zarr.py  01_rdps_to_zarr.smk  02_hrdps_to_zarr.py  02_hrdps_to_zarr.smk  03_rdps_to_hrdps_training.py  03_rdps_to_hrdps_training.smk  04_rdps_to_hrdps_inference.py  04_rdps_to_hrdps_inference.smk
src/resoterre/: __init__.py  calendar_utils.py  cli.py  config_utils.py  io_utils.py  logging_utils.py  memory_utils.py  snakemake_utils.py  type_checker_utils.py  utils.py
src/resoterre/data_generators/: rdps_mock_data.py
src/resoterre/data_management/: data_info.py  data_io.py  forecast_utils.py  geo_utils.py  netcdf_utils.py  timeseries.py  variables.py
src/resoterre/datasets/hrdps/: hrdps_integrity_check.py  hrdps_processing.py  hrdps_variables.py
src/resoterre/datasets/rdps/: rdps_integrity_check.py  rdps_processing.py  rdps_variables.py
src/resoterre/experiments/: rdps_to_hrdps_inference.py  rdps_to_hrdps_training.py  rdps_to_hrdps_workflow.py
src/resoterre/hybrid_data_loaders/: rdps_to_hrdps.py  rdps_to_hrdps_preprocess.py  rdps_to_hrdps_utils.py  rdps_to_hrdps_workflow.py
src/resoterre/ml/: data_loader_utils.py  dataset_manager.py  ml_loops.py  network_manager.py  neural_networks_basic.py  neural_networks_unet.py  runner_unet.py
src/resoterre/plots/: ml_sample_plot.py  ml_training_plot.py  nd_plots.py
tests/: test_calendar_utils.py  test_config_utils.py  test_io_utils.py  test_logging_utils.py  test_memory_utils.py  test_resoterre.py  test_snakemake_utils.py  test_utils.py
tests/data_generators/: test_rdps_mock_data.py
tests/data_management/: test_data_info.py  test_data_io.py  test_forecast_utils.py  test_geo_utils.py  test_netcdf_utils.py  test_timeseries.py
tests/datasets/: test_hrdps_integrity_check.py
tests/datasets/hrdps/: test_hrdps_processing.py
tests/datasets/rdps/: test_rdps_integrity_check.py
tests/experiments/: test_rdps_to_hrdps_workflow.py
tests/hybrid_data_loaders/: test_rdps_to_hrdps.py
tests/ml/: test_data_loader_utils.py  test_dataset_manager.py  test_ml_loops.py  test_network_manager.py  test_neural_networks_basic.py  test_neural_networks_unet.py
tests/plots/: test_nd_plots.py
